# jeff-mlir

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitmodules  .pre-commit-config.yaml  .rumdl.toml  .typos.toml  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: lint.yml  test.yml
cmake/: CTestCustom.cmake.in  ExternalDependencies.cmake  SetupMLIR.cmake
cmake/patches/: capnproto-disable-tests.patch
include/: CMakeLists.txt
include/jeff/Conversion/ArithToJeff/: ArithToJeff.h  ArithToJeff.td  CMakeLists.txt
include/jeff/Conversion/JeffToArith/: CMakeLists.txt  JeffToArith.h  JeffToArith.td
include/jeff/Conversion/JeffToMath/: CMakeLists.txt  JeffToMath.h  JeffToMath.td
include/jeff/Conversion/JeffToNative/: CMakeLists.txt  JeffToNative.h  JeffToNative.td
include/jeff/Conversion/JeffToTensor/: CMakeLists.txt  JeffToTensor.h  JeffToTensor.td
include/jeff/Conversion/MathToJeff/: CMakeLists.txt  MathToJeff.h  MathToJeff.td
include/jeff/Conversion/NativeToJeff/: CMakeLists.txt  NativeToJeff.h  NativeToJeff.td
include/jeff/Conversion/TensorToJeff/: CMakeLists.txt  TensorToJeff.h  TensorToJeff.td
include/jeff/IR/: CMakeLists.txt  JeffDialect.h  JeffDialect.td  JeffInterfaces.h  JeffInterfaces.td  JeffOps.h  JeffOps.td
include/jeff/Translation/: Deserialize.hpp  Serialize.hpp
lib/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Conversion/ArithToJeff/: ArithToJeff.cpp  CMakeLists.txt
lib/Conversion/JeffToArith/: CMakeLists.txt  JeffToArith.cpp
lib/Conversion/JeffToMath/: CMakeLists.txt  JeffToMath.cpp
lib/Conversion/JeffToNative/: CMakeLists.txt  JeffToNative.cpp
lib/Conversion/JeffToTensor/: CMakeLists.txt  JeffToTensor.cpp
lib/Conversion/MathToJeff/: CMakeLists.txt  MathToJeff.cpp
lib/Conversion/NativeToJeff/: CMakeLists.txt  NativeToJeff.cpp
lib/Conversion/TensorToJeff/: CMakeLists.txt  TensorToJeff.cpp
lib/IR/: CMakeLists.txt  JeffDialect.cpp  JeffInterfaces.cpp  JeffOps.cpp
lib/Translation/: CMakeLists.txt  Deserialize.cpp  Serialize.cpp
lib/opt/: CMakeLists.txt  jeff-opt.cpp
unittests/: CMakeLists.txt  entangled_calls.jeff  entangled_qs.jeff  generate_test_cases.py  test.cpp  test_deserialize.cpp  test_round_trip.cpp
unittests/Conversion/: CMakeLists.txt  test_native_round_trip.cpp
unittests/Conversion/ArithRoundTrip/: CMakeLists.txt  test_arith_round_trip.cpp
unittests/IR/: CMakeLists.txt  test_parse_do_while_op.cpp  test_parse_for_op.cpp  test_parse_switch_op.cpp  test_parse_while_op.cpp
unittests/Translation/: CMakeLists.txt  test_round_trip.cpp
unittests/inputs/: .gitignore  bell_pair.jeff  entangled_calls.jeff  generate_test_cases.py  skip_catalyst_simple.jeff  skip_catalyst_tket_opt.jeff  skip_entangled_qs.jeff  skip_qubits.jeff  unit_float_abs.jeff  unit_float_acos.jeff  unit_float_acosh.jeff  unit_float_add.jeff  unit_float_array_const32.jeff  unit_float_array_const64.jeff  unit_float_array_create.jeff  unit_float_array_get_index.jeff  unit_float_array_length.jeff  unit_float_array_set_index.jeff  unit_float_array_zero.jeff  unit_float_asin.jeff  unit_float_asinh.jeff  unit_float_atan.jeff  unit_float_atan2.jeff  unit_float_atanh.jeff  unit_float_ceil.jeff  unit_float_const32.jeff  unit_float_const64.jeff  unit_float_cos.jeff  unit_float_cosh.jeff  unit_float_eq.jeff  unit_float_exp.jeff  unit_float_floor.jeff  unit_float_isInf.jeff  unit_float_isNan.jeff  unit_float_log.jeff  unit_float_lt.jeff  unit_float_lte.jeff  unit_float_max.jeff  unit_float_min.jeff  unit_float_mul.jeff  (+100 more)
